# oeAware-scenario

./: README.en.md  README.md
analysis/: CMakeLists.txt
analysis/adapt/: oeAware_adapt.cpp  oeaware_adapt.cpp
analysis/analysis/: analysis.cpp  analysis.h  common.cpp  common.h  env.cpp  env.h
analysis/docs/: readme.md
analysis/tests/: CMakeLists.txt  test_common.cpp  test_env.cpp
example/: CMakeLists.txt
example/adapt/: CMakeLists.txt  adapt.cpp
example/include/dep_plugin/: collector.h
example/include/frame/: common.h
example/scenario/: CMakeLists.txt  scenario.cpp  scenario.h
include/: pmu_plugin.h  scenario.h
thread_aware/: CMakeLists.txt  thread_aware.cpp  thread_aware.h  thread_scenario.conf
